@@ -26,13 +26,9 @@ ACE_IPC_SAP::dump (void) const
 
   ACELIB_DEBUG ((LM_DEBUG, ACE_BEGIN_DUMP, this));
   ACELIB_DEBUG ((LM_DEBUG, ACE_TEXT ("handle_ = %d"), this->handle_));
-  ACELIB_DEBUG ((LM_DEBUG, ACE_TEXT ("\npid_ = %d"), this->pid_));
   ACELIB_DEBUG ((LM_DEBUG, ACE_END_DUMP));
 #endif /* ACE_HAS_DUMP */
 }
-
-// Cache for the process ID.
-pid_t ACE_IPC_SAP::pid_ = 0;
 
 // This is the do-nothing constructor.  It does not perform a
 // ACE_OS::socket system call.
@@ -47,10 +43,6 @@ int
 ACE_IPC_SAP::enable (int value) const
 {
   ACE_TRACE ("ACE_IPC_SAP::enable");
-
-  // First-time in initialization.
-  if (ACE_IPC_SAP::pid_ == 0)
-    ACE_IPC_SAP::pid_ = ACE_OS::getpid ();
 
 #if defined (ACE_WIN32) || defined (ACE_VXWORKS)
   switch (value)
@@ -76,7 +68,7 @@ ACE_IPC_SAP::enable (int value) const
 #if defined (F_SETOWN)
       return ACE_OS::fcntl (this->handle_,
                             F_SETOWN,
-                            ACE_IPC_SAP::pid_);
+                            ACE_OS::getpid ());
 #else
       ACE_NOTSUP_RETURN (-1);
 #endif /* F_SETOWN */
@@ -87,7 +79,7 @@ ACE_IPC_SAP::enable (int value) const
 #if defined (F_SETOWN) && defined (FASYNC)
       if (ACE_OS::fcntl (this->handle_,
                          F_SETOWN,
-                         ACE_IPC_SAP::pid_) == -1
+                         ACE_OS::getpid ()) == -1
           || ACE::set_flags (this->handle_,
                                         FASYNC) == -1)
         return -1;
